syntax = "proto3";

package ai.metathings.service.identityd2;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message ListCredentialsForEntityRequest {
	OpEntity entity = 1;
}

message ListCredentialsForEntityResponse {
	repeated Credential credentials = 1;
}
